# upo-appAI

./: .env.example  .gitignore  Dockerfile  PROMTP DIFFERENCES.md  Programmazione App Intelligenti.md  README.md  configs.yaml  configs.yaml.example  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
Configurazione Ambiente di Lavoro/: Configurazione Ambiente di Lavoro.md  Dockerfile  requirements.txt
demos/: agno_agent.py  agno_demo.py  agno_workflow.py  api_market_providers.py  api_news_providers.py  api_socials_providers.py  cdp_market_demo.py  coinbase_demo.py  cryptocompare_demo.py  market_agent_demo.py  market_providers_api_demo.py  news_api.py  ollama_demo.py  telegram_bot_demo.py
docs/: App_Architecture_Diagrams.md  Async_Implementation_Detail.md  Current_Architecture.md  Docs_Obsolescenza_Report.md  Flow_Sequence_Diagrams.md  Market_Data_Implementation_Plan.md  Piano di Sviluppo.md  Progetto Esame.md  Query_Examples.md  Telegram_Integration_plan.md
proposte/: Progetto 1 - Corsi.md  Progetto 2 - Crypto.md  Progetto 3 - Viaggi.md  Riassunto.md
resources/: cryptos.csv
src/: app.py  example.py
src/app/: __init__.py  __main__.py  chat_manager.py  configs.py  models.py  pipeline.py  predictor.py  tool.py
src/app/agents/: __init__.py  action_registry.py  core.py  market.py  market_agent.py  models.py  news_agent.py  pipeline.py  plan_memory_tool.py  predictor.py  predictor_agent.py  social_agent.py  team.py
src/app/agents/prompts/: __init__.py  predictor.txt  query_analyzer.txt  query_check.md  query_check.txt  report_generation.md  report_generation.txt  team_leader.md  team_leader.txt  team_market.md  team_market.txt  team_news.md  team_news.txt  team_social.md  team_social.txt
src/app/api/: crypto_symbols.py  wrapper_handler.py
src/app/api/base/: markets.py  news.py  social.py
src/app/api/core/: __init__.py  markets.py  news.py  social.py
src/app/api/markets/: __init__.py  binance.py  coinbase.py  cryptocompare.py  yfinance.py
src/app/api/news/: __init__.py  cryptopanic_api.py  duckduckgo.py  googlenews.py  newsapi.py
src/app/api/social/: __init__.py  chan.py  reddit.py  x.py
src/app/api/tools/: __init__.py  market_tool.py  news_tool.py  plan_memory_tool.py  social_tool.py  symbols_tool.py
src/app/api/tools/instructions/: __init__.py  market_instructions.md  news_instructions.md  plan_memory_instructions.md  social_instructions.md  symbols_instructions.md
src/app/base/: markets.py  news.py
src/app/interface/: __init__.py  chat.py  telegram.py  telegram_app.py
src/app/interface/styles/: chat.css
src/app/markets/: __init__.py  base.py  binance.py  binance_public.py  coinbase.py  cryptocompare.py  error_handler.py  yfinance.py
src/app/news/: __init__.py  base.py  cryptopanic_api.py  duckduckgo.py  gnews_api.py  googlenews.py  news_api.py
src/app/signers/market_signers/: binance_signer.py  coinbase_cdp_signer.py  coinbase_rest_signer.py  coinbase_signer.py  cryptocompare_signer.py
src/app/social/: __init.py  __init__.py  base.py  chan.py  reddit.py  x.py
src/app/toolkits/: market_toolkit.py
src/app/utils/: __init__.py  aggregated_models.py  chat_manager.py  market_aggregation.py  market_aggregator.py  market_data_aggregator.py  telegram_app.py  wrapper_handler.py
tests/: conftest.py  test_market_data_aggregator.py
tests/agents/: test_market.py  test_market_agents.py  test_predictor.py  test_providers.py  test_query_check.py  test_report.py  test_team.py
tests/api/: test_binance.py  test_coinbase.py  test_cryptocompare.py  test_cryptopanic_api.py  test_duckduckgo_news.py  test_gnews_api.py  test_google_news.py  test_news_api.py  test_reddit.py  test_social_4chan.py  test_social_reddit.py  test_social_x_api.py  test_yfinance.py
tests/tools/: test_crypto_symbols.py  test_market_tool.py  test_news_tool.py  test_socials_tool.py
tests/utils/: test_configs.py  test_market_aggregator.py  test_market_data_aggregator.py  test_wrapper_handler.py
