[project]
name = "upo-app-ai"
version = "0.1.0"
description = "Agente di analisi e consulenza crypto"
requires-python = "==3.12.*"

# Qui ho messo alcune librerie utili utilizzate durante il corso.
# Se si nota che alcune non sono necessarie, si potrebbero rimuovere
# in modo da evitare conflitti o problemi futuri.
# Per ogni roba ho fatto un commento per evitare di dimenticarmi cosa fa chi.
# Inoltre ho messo una emoji per indicare se è raccomandato o meno.
dependencies = [
    "pytest", # Test
    "dotenv", # Gestire variabili d'ambiente (generalmente API keys od opzioni)
    "gradio", # UI web semplice con user_input e output
    "colorlog", # Log colorati in console

    # Per costruire agenti (ovvero modelli che possono fare più cose tramite tool) https://github.com/agno-agi/agno
    # altamente consigliata dato che ha anche tools integrati per fare scraping, calcoli e molto altro
    # oltre a questa è necessario installare anche le librerie specifiche per i modelli che si vogliono usare
    "agno",

    # Modelli supportati e installati (aggiungere qui sotto quelli che si vogliono usare)
    "google-genai",
    "ollama",
    
    "openai",
    "deepseek",

    # API di exchange di criptovalute
    "coinbase-advanced-py",
    "python-binance",
    "yfinance",

    # API di notizie
    "newsapi-python",
    "gnews",
    "ddgs",

    # API di social media
    "praw", # Reddit

    # Per telegram bot
    "python-telegram-bot", # Interfaccia Telegram Bot
    "markdown-pdf", # Per convertire markdown in pdf
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
